--- a/styles/style_inicio.css
+++ b/styles/style_inicio.css
@@ -37,7 +37,7 @@
   padding: 2% 8% 5% 10%;
   gap: 10px;
   height: 100%;
-  background-image: url('https://th.bing.com/th/id/OIG1.FcOjdHwQwfdQF1SVwwUI?w=1024&h=1024&rs=1&pid=ImgDetMain');
+  background-image: url('/assets/fondo4.jpg');
   background-size: cover; /* Ajusta la imagen para cubrir todo el fondo */
   background-position: center; /* Centra la imagen */
   background-repeat: no-repeat; /* Evita que la imagen se repita */
