--- a/styles/style_encriptador.css
+++ b/styles/style_encriptador.css
@@ -5,6 +5,8 @@
     --color-secundario: rgb(0, 0, 0);
     --color-terciario:rgb(239, 239, 239);
     --color-titulo-botones: white;
+    --color-header-footer: rgb(5, 0, 34);
+
     --fuente-monserrat: "Monserrat", sans-serif;
     --fuente-krona: "Krona", sans-serif;
 }
@@ -14,8 +16,11 @@
     padding: 0;
 }
 .header {
-    padding: 2% 0% 1% 10%;
-    background-color: var(--color-secundario);
+    font-family: var(--fuente-krona);
+  font-size: 1rem;
+  font-weight: 500;
+    padding: 1% 0% 1% 10%;
+    background-color: var(--color-header-footer);
     display: flex;
     justify-content: space-between;
     color: var(--color-titulo-botones);
@@ -29,7 +34,11 @@
     padding: 1%;
   }
 body{
-    background-color: var(--color-terciario);
+    background-image: url('/assets/fondo4.jpg');
+    background-size: cover; /* Ajusta la imagen para cubrir todo el fondo */
+    background-position: center; /* Centra la imagen */
+    background-repeat: no-repeat; /* Evita que la imagen se repita */
+    height: 1hv; /* Ajusta la altura del main para que ocupe toda la pantalla */
 }
 
 .hidden {
@@ -37,7 +46,7 @@ body{
 }
 
 .seccionMain{
-    background-color: var(--color-primario);
+    background-color: transparent;
     border-radius: 10px;
     padding: 2% 1% 2% 10%;
     margin: 2%;
@@ -48,7 +57,7 @@ body{
     gap: 10px;
 }
 .sugerencia{
-    color: gray;
+    color: rgb(1, 1, 1);
 }
 .cuadro_texto_usuario{
     font-family: var(--fuente-monserrat);
@@ -70,10 +79,10 @@ body{
     justify-content: center;
     text-align: center;
     margin: 8%;
-    padding: 5%;
+    padding: 0% 1% 2% 3%;
     border-radius: 20px;
-    height: 80%;
-    width: 100%;
+    height: 90%;
+    gap: 10px;
 }
 .salida_texto{
     display: flex;
@@ -81,16 +90,17 @@ body{
     text-align: center;
     font-family: var(--fuente-monserrat);
     font-size: 1rem;
-    margin: 5%;
+    padding: 0% 10% 0% 7%;
+    margin: 2%;
     overflow: auto;
 }
 .imagen{
-    width: 100%;
+    width: 90%;
     border-radius: 20px;
     box-shadow: 0 0 20px 10px rgb(247, 212, 150);
 }
 .btn_copiar_texto{
-    background-color: var(--color-secundario);
+    background-color: var(--color-header-footer);
     color: var(--color-primario);
     border-radius: 5px;
     height: 7%;
@@ -107,7 +117,7 @@ body{
     gap: 50px;
 }
 .btn_cripto{
-    background-color: var(--color-secundario);
+    background-color: var(--color-header-footer);
     color: var(--color-primario);
     border-radius: 5px;
     justify-content: space-between;
@@ -123,7 +133,7 @@ body{
 }
 
 .footer {
-    background-color: var(--color-secundario);
+    background-color: var(--color-header-footer);
     color: var(--color-primario);
     text-align: center;
     font-family: var(--fuente-monserrat);
